--- a/client/todo.html
+++ b/client/todo.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>A Simple App</title>
+    <title>A To-Do App</title>
 
-    <link href="stylesheets/comments.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/todo.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <header>
-      <h1>Comments</h1>
-      <p>A simple app that allows a user to input comments</p>
+      <h1>To-Do</h1>
+      <p>A simple app that allows a user to input to-do items</p>
     </header>
 
     <main>
       <section class="comment-input">
         <p style="margin-top: 15px;">
-          Add Your Comment: <br />
+          Add Your To-Do: <br />
           <input type="text" /> <button>+</button>
         </p>
         <p style="margin-top:10px;">
-          Retrieve Comment:
+          Retrieve To-Do:
           <input type="text" placeholder="Enter comment" id="getOne" />
           <button style="font-size:18px;">&rarr;</button>
         </p>
         <p style="margin-top:15px;">
-          Delete Comment:
+          Delete To-Do:
           <input type="text" placeholder="Enter comment" id="deleteOne" />
           <button>-</button>
         </p>
         <p style="margin-top:15px;">
-          Delete All Comments:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          Delete All
+          To-Do's:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <button>*</button>
         </p>
       </section>
 
-      <section class="comments"><p>List of Comments</p></section>
+      <section class="comments"><p>List of To-Do Items</p></section>
 
       <div id="outDiv" style="margin-top: 10px; border-top: thin solid;"></div>
     </main>
@@ -42,6 +43,6 @@
     <footer><p>this work is released into the public domain</p></footer>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="javascripts/comments.js"></script>
+    <script src="javascripts/todo.js"></script>
   </body>
 </html>
